# hex-toolkit

./: .gitignore  CLAUDE.md  CLI_README.md  README.md  pyproject.toml
examples/: basic_usage.py  run_project.py
src/hex_api/: __init__.py  auth.py  cli.py  client.py  config.py  exceptions.py
src/hex_api/models/: __init__.py  base.py  embedding.py  projects.py  runs.py  semantic_models.py
src/hex_api/resources/: __init__.py  base.py  embedding.py  projects.py  runs.py  semantic_models.py
src/hex_toolkit/: cli.py
tests/: __init__.py  conftest.py  openapi_validator.py  test_client.py  test_integration.py
tests/cli/: conftest.py  test_main.py  test_mcp.py  test_projects.py  test_runs.py
tests/test_models/: test_projects.py
tests/test_resources/: __init__.py  test_projects.py  test_runs.py
